--- a/src/blocks/element/__card/element__card.css
+++ b/src/blocks/element/__card/element__card.css
@@ -1,8 +1,7 @@
 .element__card {
     width: 282px;
-    height: 282px;
+    object-fit:fill;
+    min-height: 282px;
+    max-height: 282px;
     border-radius: 10px 10px 0px 0px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
 }
