--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__logged-in-units/header__logged-in-units.css);
+@import url(./blocks/header/__logout-button/header__loguot-button.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__avatar/profile__avatar.css);
 @import url(./blocks/profile/__avatar-container/profile__avatar-container.css);
@@ -38,7 +40,10 @@
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
 @import url(./blocks/popup/_assignment/_card/popup_assignment_card.css);
+@import url(./blocks/popup/__container/_assignment/_info-tool-tip/popup_assignment_info-tool-tip.css);
+@import url(./blocks/popup/__alert/popup__alert.css);
 @import url(./blocks/popup/__image/popup__image.css);
+@import url(./blocks/popup/__union/popup__union.css);
 @import url(./blocks/popup/__container/popup__container.css);
 @import url(./blocks/popup/__container/_assignment/_card/popup__container_assignment_card.css);
 @import url(./blocks/popup/__close-icon/popup__close-icon.css);
